--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
-h1, h2 {
-    color: rgb(255, 0, 0);
-    text-align: center;
-}
+
 p {
     color: blue;
     text-align: left;
 }
-li {
-    display: inline
+a:link, a:visited {
+    color: black;
+    display: inline-block;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;    
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+a:hover, a:active {
+    color: grey;
+    background-color: rgb(0,0,0);
 }
