--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ p {
     text-align: left;
 }
 a:link, a:visited {
+    float: left;
     color: black;
     display: inline-block;
     padding: 15px 25px;
@@ -12,5 +13,11 @@ a:link, a:visited {
 }
 a:hover, a:active {
     color: grey;
-    background-color: rgb(0,0,0);
+    background-color:rgb(47, 48, 117);
+}
+body {
+    background-color:rgb(61, 111, 158);
+}
+img {
+    background-size: cover;
 }
