--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,14 @@ a:hover, a:active {
 body {
     background-color:rgb(61, 111, 158);
 }
-img {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+h2 ul li {
+    font-size: 200%;
+    line-height: 1.6;
+
+}
+hr {
+    color: black;
+    width: 100%;
+    height: 1px;
+    border-width: 2px;
 }
