--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,42 @@
-
 p {
     color: blue;
     text-align: left;
 }
-a:link, a:visited {
+
+a:link,
+a:visited {
     float: left;
     color: black;
     display: inline-block;
     padding: 15px 25px;
     text-align: right;
-    text-decoration: none;    
+    text-decoration: none;
 }
-a:hover, a:active {
+
+a:hover,
+a:active {
     color: grey;
-    background-color:rgb(47, 48, 117);
+    background-color: rgb(47, 48, 117);
 }
+
 body {
-    background-color:rgb(61, 111, 158);
+    background-color: rgb(61, 111, 158);
 }
+
 h2 ul li {
     font-size: 200%;
     line-height: 1.6;
 
 }
+
 hr {
     color: black;
     width: 100%;
     height: 1px;
     border-width: 2px;
+}
+
+.inline-icon {
+    height: 2%;
+    width: 2%;
 }
