--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-p {
-    color: blue;
-    text-align: left;
-}
+:root {
+    --c1: #03254c;
+    --c2: #1167b1;
+    --c3: #187bcd;
+    --c4: #2a9df4;
+    --c5: #d0efff;
+ }
 
 a:link,
 a:visited {
@@ -15,23 +18,21 @@ a:visited {
 a:hover,
 a:active {
     color: grey;
-    background-color: rgb(3, 37, 76);
+    background-color: var(--c1);
 }
 
 body {
-    background-color: #187bcd;
-}
-body {
-    background
+    background-color: var(--c3);
 }
 
 h2 ul li {
     font-size: 200%;
-    line-height;
+    line-height: 1.6;
 }
 
 hr {
     color: black;
+    border: solid var(--c1);
     width: 100%;
     height: 1px;
     border-width: 2px;
@@ -40,4 +41,13 @@ hr {
 .inline-icon {
     height: 2%;
     width: 2%;
+}
+
+.index-body {
+    background-image: url(images/home-bg.jpg) ;
+}
+.home-title {
+    text-align: center;
+    display: block;
+    font-size: xx-large;
 }
