--- a/tablestyles.css
+++ b/tablestyles.css
@@ -1,5 +1,5 @@
 :root {
-    --c1: #03254c;
+    --c1: #7a8fa7;
     --c2: #1167b1;
     --c3: #187bcd;
     --c4: #2a9df4;
@@ -28,13 +28,9 @@ label {
     font-size: 150%; 
     border: 2px solid black;
     border-collapse: collapse;
-    max-width: 20%;
-    width: auto;
-    margin-right: 2px;
-    margin-left: auto;
-
+    max-width: 60%;
+    margin: auto;
  }
-
  .motivatie td{
     background-color:var(--c5);
  }
@@ -45,7 +41,8 @@ label {
     font-size: 150%; 
     border: 2px solid black;
     border-collapse: collapse;
-    max-width: 20%;
+    max-width: 60%;
+    margin: auto;
  }
  .welkom td {
     background-color: var(--c5);
